GNOME Bugzilla – Bug 739168
facebook: Error getting identity: Could not parse response
Last modified: 2014-10-29 16:13:17 UTC
I tried to setup a facebook account with 3.14.0 (on openSUSE) and got the following error: Error creating account Error getting identity: Could not parse response The json object I get after I press the login button doesn't have an email field. That's why it fails. Fields which are available in my case are: id,first_name,gender,last_name,link,locale,name,timezone,updated_time,username,verified,work I suggest to use the username if an email is not available for presentation_identity.
Created attachment 289311 [details] [review] Add username fallback
Review of attachment 289311 [details] [review]: Thanks for the patch Thomas. Looks good to me, except a few minor nits. ::: src/goabackend/goafacebookprovider.c @@ +253,3 @@ if (presentation_identity == NULL) { + // use username as fallback for presentation identity The comment is redundant. @@ +266,1 @@ } Stray, unrelated change.
Created attachment 289597 [details] [review] facebook: Add fallback to get presentation id Fixed the above issues.