facebook: Add fallback to get presentation id

After the facebook login, the email address from the returned json
object is used as presentation identity. Seems that the email is not
always availale. In this case, use the username from the json object as
fallback.

https://bugzilla.gnome.org/show_bug.cgi?id=739168